.cicd/k8s_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: i27-clothing-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: i27-clothing-dev
  template:
    metadata:
      labels:
        app: i27-clothing-dev
    spec:
      containers:
      - name: i27-clothing-dev
        image: DIT
        ports:
        - containerPort: 3000
        command: ["/entrypoint.sh"]
        args: ["dev"]
---
apiVersion: v1
kind: Service
metadata:
  name: i27-clothing-dev-service
spec:
  selector:
    app: i27-clothing-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
