.cicd/k8s_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${appName}-${env}-${namespace}-ingress
  namespace: ${namespace}
spec:
  ingressClassName: nginx 
  rules:
    - http:
        paths:
          - path: /clothing
            pathType: Prefix
            backend:
              service:
                name: ${serviceName}
                port:
                  number: 80
